# Crux

./: .gitignore  CHANGELOG.md  ROADMAP.md
.cm/: .gitignore  PLAN.md  ROADMAP.md  SCHEMA.md  TASKS.md  config.toml  roadmap.json  tasks.json
.cm/agents/: ACTIONS.md  STRUCTURE.md
.cm/plans/: plan-1.task-1.md  plan-10.task-1.md  plan-11.task-1.md  plan-12.task-1.md  plan-13.task-1.md  plan-14.task-1.md  plan-15.task-1.md  plan-16.task-1.md  plan-17.task-1.md  plan-18.task-1.md  plan-19.task-1.md  plan-2.task-1.md  plan-20.task-1.md  plan-21.task-1.md  plan-22.task-1.md  plan-23.task-1.md  plan-24.task-1.md  plan-25.task-1.md  plan-26.task-1.md  plan-27.task-1.md  plan-28.task-1.md  plan-29.task-1.md  plan-3.task-1.md  plan-30.task-1.md  plan-31.task-1.md  plan-32.task-1.md  plan-33.task-1.md  plan-34.task-1.md  plan-35.task-1.md  plan-36.task-1.md  plan-37.task-1.md  plan-38.task-1.md  plan-39.task-1.md  plan-4.task-1.md  plan-40.task-1.md  plan-41.task-1.md  plan-42.task-1.md  plan-43.task-1.md  plan-44.task-1.md  plan-45.task-1.md  (+38 more)
.cm/spec/: PLAN.md  ROADMAP.md  SNIP.md  TESTING_PLAN.md
.github/workflows/: test-each-commit.yml
main/: CMakeLists.txt
main/core/: descriptor_checksum.c  descriptor_checksum.h  descriptor_validator.c  descriptor_validator.h  psbt.c  psbt.h  registry.c  registry.h  settings.c  settings.h  ss_whitelist.c  ss_whitelist.h  wallet.c  wallet.h
main/core/test/: Makefile  test_psbt_classify.c  test_purpose_binding.c  test_registry_match.c  test_registry_parse.c  test_ss_whitelist_is_whitelisted.c  test_ss_whitelist_parse.c  test_ss_whitelist_regen.c
main/core/test/stubs/: esp_err.h  key_stub.c  registry_stub.c  wallet_stub.c
main/pages/: load_descriptor_storage.c  store_descriptor.c
main/pages/home/: addresses.c  home.c  public_key.c
main/pages/login/: login_settings.c
main/pages/scan/: scan.c
main/pages/settings/: descriptor_manager.c  registered_descriptors.c  registered_descriptors.h  wallet_settings.c
main/pages/shared/: address_checker.c  descriptor_loader.c  key_confirmation.c
main/ui/: key_info.c  settings_row.c  settings_row.h
main/ui/assets/: icons_24.c  icons_24.h  icons_36.c  icons_36.h
scripts/: diag-sim-ssh-x.sh  format.sh  gen-baseline-sim-data.py  gen-qr.py  gen-test-plan.py  gen-test-psbts.py  requirements.txt
scripts/lib/: bbqr_encode.py  nvs_pack.py  qr_ascii.py
simulator/: CMakeLists.txt
simulator/platform/esp_idf_stubs/: storage_stub.c
test-fixtures/: .gitignore  REFERENCES.md  manifest.yaml
